@@ -1,3 +1,8 @@
+879.	[bug]		fdupont
+	Drop DHCPREQUEST message from an unknown client in the
+	INIT-REBOOT state.
+	(Trac #3656, git xxx)
+
 878.	[func]		marcin
 	DHCPv4 and DHCPv6 server now support the lfc-interval
 	parameter which configures the interval in which the
